# BankCustomerChurnAnalysis

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .trufflehog3.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  STREAMLIT_DEPLOYMENT.md  USER_MANUAL.md  config.toml  constitution.md  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py  vercel.json
.github/workflows/: ci.yml
.semgrep/: python.yml
.specify/: README.md  constitution.md  setup.md
.specify/memory/: constitution.md
.specify/templates/: feature-spec-template.md  plan-template.md  spec-template.md  tasks-template.md
.streamlit/: config.toml
app/: __init__.py  app.py  model.py  ollama_model.py  translations.py
app/static/css/: styles.css
app/static/js/: app.js  i18n.js
app/templates/: index.html
data/: Churn_Modelling.csv
specs/: BCCA-FEAT-001-prediction-api.md
specs/BCCA-FEAT-002-batch-prediction/: plan.md  spec.md  tasks.md
specs/churn-prediction/: plan.md  spec.md  tasks.md
temp_pip/GitPython-3.0.6.dist-info/: RECORD
temp_pip/truffleHog-2.2.1.dist-info/: RECORD
temp_pip/truffleHogRegexes-0.0.7.dist-info/: RECORD
tests/: test_app.py  test_model.py
