[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bank-customer-churn-analysis"
version = "1.0.0"
description = "AI-powered Bank Customer Churn Analysis platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "gunicorn>=21.2",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "PD", "PL", "TRY", "RUF"]
ignore = ["D203", "D213", "D407", "D413", "D415"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B311", "B403"]

[tool.vulture]
exclude = ["tests", ".venv", "venv"]
ignore_names = ["create_app", "app", "_model", "_scaler", "_label_geo", "_label_gender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["app"]