[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bank-customer-churn-analysis"
version = "1.0.0"
description = "AI-powered Bank Customer Churn Analysis platform with multi-language support (English, Hindi, Telugu), Random Forest ML predictions, and interactive dashboards."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
keywords = ["banking", "churn-analysis", "machine-learning", "streamlit", "data-science", "customer-retention"]
authors = [
    {name = "BCCA Team", email = "bcca@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Natural Language :: Hindi",
    "Natural Language :: Telugu",
]
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bank-customer-churn-analysis"
Repository = "https://github.com/yourusername/bank-customer-churn-analysis"
Documentation = "https://github.com/yourusername/bank-customer-churn-analysis#readme"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "PD", "PL", "TRY", "RUF"]
ignore = [
    "D203",
    "D213",
    "D400",
    "D407",
    "D413",
    "D415",
    "D205",
    "E501",
    "N806",
    "PTH103",
    "PTH110",
    "PTH118",
    "PTH120",
    "PLR2004",
    "PD901",
]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B311", "B403"]

[tool.vulture]
exclude = ["tests", ".venv", "venv"]
ignore_names = ["create_app", "app", "_model", "_scaler", "_label_geo", "_label_gender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 30
show_missing = true

[tool.setuptools.packages.find]
where = ["app"]

[tool.pylint]
py-version = "3.10"
jobs = 4
persistent = false
unsafe-load-any-extension = false

[tool.pylint.messages-control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "x", "y", "z", "X", "y", "_", "df", "id", "ex", "db",
    "X_train", "X_test", "y_train", "y_test",
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-attributes = 10
max-statements = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
    "E402",  # module level import not at top
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "env",
    "model",
    "tests",
]
per-file-ignores = []
max-complexity = 18
max-doc-length = 120

[tool.pyupgrade]
py38-plus = true
keep-percent-format = false
keep-mock = false

[tool.pip-audit]
strict = true
desc = true
vulnerability-service = "osv"